@@ -21,7 +21,7 @@ class CampaignsController < ApplicationController
   # GET /campaigns/1.xml                                                   HTML
   #----------------------------------------------------------------------------
   def show
-    @campaign = Campaign.find(params[:id])
+    @campaign = Campaign.my(@current_user).find(params[:id])
     @stage = Setting.as_hash(:opportunity_stage)
     @comment = Comment.new
 
@@ -57,11 +57,15 @@ class CampaignsController < ApplicationController
   # GET /campaigns/1/edit                                                  AJAX
   #----------------------------------------------------------------------------
   def edit
-    @campaign = Campaign.find(params[:id])
+    @campaign = Campaign.my(@current_user).find(params[:id])
     @users = User.all_except(@current_user)
     if params[:previous] =~ /(\d+)\z/
       @previous = Campaign.find($1)
     end
+
+  rescue ActiveRecord::RecordNotFound
+    flash[:warning] = "This campaign is no longer available."
+    render(:update) { |page| page.reload }
   end
 
   # POST /campaigns
